@@ -70,11 +70,12 @@
         <hamcrest.version>2.2</hamcrest.version>
         <hamcrest.optional.version>2.0.0</hamcrest.optional.version>
         <scalecube.version>2.6.12</scalecube.version>
-        <calcite.version>1.27.0</calcite.version>
-        <janino.version>3.1.4</janino.version>
-        <avatica.version>1.18.0</avatica.version>
+        <calcite.version>1.28.0</calcite.version>
+        <immutables.version>2.8.8</immutables.version>
+        <janino.version>3.1.6</janino.version>
+        <avatica.version>1.19.0</avatica.version>
         <jsonpath.version>2.4.0</jsonpath.version>
-        <reflections.version>0.9.10</reflections.version>
+        <classgraph.version>4.8.110</classgraph.version>
         <javassist.version>3.28.0-GA</javassist.version>
         <esri.geometry.version>2.2.0</esri.geometry.version>
         <checker.version>3.10.0</checker.version>
@@ -151,8 +152,14 @@
 
             <dependency>
                 <groupId>org.apache.ignite</groupId>
-                <artifactId>ignite-calcite</artifactId>
+                <artifactId>ignite-sql-engine</artifactId>
                 <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.immutables</groupId>
+                <artifactId>value-annotations</artifactId>
+                <version>${immutables.version}</version>
             </dependency>
 
             <dependency>
@@ -379,9 +386,9 @@
             </dependency>
 
             <dependency>
-                <groupId>org.reflections</groupId>
-                <artifactId>reflections</artifactId>
-                <version>${reflections.version}</version>
+                <groupId>io.github.classgraph</groupId>
+                <artifactId>classgraph</artifactId>
+                <version>${classgraph.version}</version>
             </dependency>
 
             <dependency>
@@ -1029,7 +1036,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>-Djava.util.logging.config.file=../../config/java.util.logging.properties</argLine>
+                    <argLine>
+                        --add-opens java.base/jdk.internal.misc=ALL-UNNAMED
+                        -Dio.netty.tryReflectionSetAccessible=true
+                        -Djava.util.logging.config.file=../../config/java.util.logging.properties
+                    </argLine>
                     <excludes>
                         <exclude>%regex[.*(It)[A-Z].*]</exclude>
                         <!-- Exclude inner classes (preserve default behaviour) -->
@@ -1045,7 +1056,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <configuration>
-                    <argLine>-Djava.util.logging.config.file=../../config/java.util.logging.properties</argLine>
+                    <argLine>
+                        --add-opens java.base/jdk.internal.misc=ALL-UNNAMED
+                        -Dio.netty.tryReflectionSetAccessible=true
+                        -Djava.util.logging.config.file=../../config/java.util.logging.properties
+                    </argLine>
                     <useModulePath>false</useModulePath>
                     <includes>
                         <include>%regex[.*(It)[A-Z].*]</include>
